Проведение рефакторинга REQUEST